--- a/data/class_groups/network_controller.yaml
+++ b/data/class_groups/network_controller.yaml
@@ -9,3 +9,5 @@ classes:
   - "%{network_service}::agents::%{network_plugin}"
   - "%{network_service}::services::fwaas"
   - "%{network_service}::plugins::%{network_plugin}"
+#  - "coe::nexus"
+#  - "neutron::plugins::cisco"
