Removed unused cinder and glance data mappings.
Expanded cinder and glance backend in data_mappings.
Delete cinder and glance backend in hiera_data.
Added new vars to user.common.yaml to support cephdeploy module changes.

--- a/data/data_mappings/glance_backend/rbd.yaml
+++ b/data/data_mappings/glance_backend/rbd.yaml
@@ -1,6 +1,6 @@
-ceph_deploy_password:
-  - cephdeploy::pass
-  - cephdeploy::baseconfig::pass
-ceph_deploy_user:
-  - cephdeploy::user
-  - cephdeploy::baseconfig::user
+ceph_openstack_user:
+  - glance::backend::rbd::rbd_store_user
+ceph_configuration_file:
+  - glance::backend::rbd::rbd_store_ceph_conf
+glance_ceph_pool:
+  - glance::backend::rbd::rbd_store_pool
