Support separate apt repo for puppet modules
Starting in Icehouse, Cisco OpenStack Installer will split Puppet
modules into their own apt repository rather than including
them in the same repository as OpenStack core components and
supporting dependencies.  This patch adds support to the puppet-coi
module's base class for setting up the new Puppet repository.

Implements: blueprint separate-puppet-repo

--- a/data/data_mappings/common.yaml
+++ b/data/data_mappings/common.yaml
@@ -333,3 +333,9 @@ ssl_cert_subject:
 #  - coe::nexus::nexus_credentials
 #nexus_config:
 #  - coe::nexus::nexus_config
+puppet_repo:
+  - coi::profiles::openstack::base::puppet_repo
+  - coe::base::puppet_repo
+puppet_repo_location:
+  - coi::profiles::openstack::base::puppet_repo_location
+  - coe::base::puppet_repo_location
