--- a/data/scenarios/compressed_ha.yaml
+++ b/data/scenarios/compressed_ha.yaml
@@ -14,6 +14,7 @@ roles:
       - coe::network::interface
       - openstack-ha::load-balancer
       - cinder::setup_test_volume
+      - mongodb::replset
       #- openstack::swift::proxy
       #- openstack::swift::storage-node
     class_groups:
