--- a/data/hiera_data/user.compressed_ha.yaml
+++ b/data/hiera_data/user.compressed_ha.yaml
@@ -96,6 +96,17 @@ rabbit_hosts:
   - node02:5672
   - node03:5672
 
+# NOTE: Uncomment the following with appropriate values if using mongo
+# as backend for ceilometer
+# The short hostnames and port numbers of the hosts on which
+# mongodb is running
+#mongodb::replset::sets:
+#  rsmain:
+#    members:
+#      - node01:27017
+#      - node02:27017
+#      - node03:27017
+
 # The address to whcih Horizon, Nova API, MySQL, and Galera should bind.
 bind_address: "%{ipaddress_eth0}"
 
