Fixes for HA proxy start issue
This commit resolves -
* Issue where Apache is not listening on right
  bind address
* Issue where nova novpc should bind to a physical
  address instead of vip.

Fixes bug#1307536 & bug#1307537

--- a/data/data_mappings/enable_ha/true.yaml
+++ b/data/data_mappings/enable_ha/true.yaml
@@ -32,10 +32,12 @@ allowed_hosts:
   - quantum::db::mysql::allowed_hosts
   - neutron::db::mysql::allowed_hosts
 bind_address:
+  - horizon:bind_address
   - horizon::cache_server_ip
   - cinder::api::bind_host
   - glance::registry::bind_host
   - glance::api::bind_host
+  - nova::vncproxy::host
   - nova::api::api_bind_address
   - mysql::config::bind_address
   - keystone::bind_host
