Add mappings for novncproxy settings
Add mappings for novncproxy settings needed in compressed_ha scenario.

Change-Id: I9cd23c87a160b54e62cb1aa8431bcc69f9964d2a
Closes-Bug: #1317714

--- a/data/data_mappings/enable_ha/true.yaml
+++ b/data/data_mappings/enable_ha/true.yaml
@@ -37,8 +37,9 @@ bind_address:
   - cinder::api::bind_host
   - glance::registry::bind_host
   - glance::api::bind_host
-  - nova::vncproxy::host
   - nova::api::api_bind_address
+  - nova::compute::vncserver_proxyclient_address
+  - nova::vncproxy::host
   - mysql::config::bind_address
   - keystone::bind_host
   - memcached::listen_ip
