Bind Apache to single IP so Haproxy can bind also
compressed_ha scenario calls apache class which by default binds Apache
to all available IP addresses. This prevents Haproxy from binding port
80 on a different IP address on that same server.

Change-Id: I0efbac6258914a377e3fc8626e35d3a3998e17ee
Closes-Bug: #1317209

--- a/data/hiera_data/user.compressed_ha.yaml
+++ b/data/hiera_data/user.compressed_ha.yaml
@@ -107,8 +107,11 @@ rabbit_hosts:
 #      - node02:27017
 #      - node03:27017
 
-# The address to whcih Horizon, Nova API, MySQL, and Galera should bind.
+# The address to which Horizon, Nova API, MySQL, and Galera should bind.
 bind_address: "%{ipaddress_eth0}"
+
+# set the bind_address for Apache
+apache::ip: "%{ipaddress_eth0}"
 
 # The compressed_ha scenario uses provider networks to pass network
 # and allows the data center network to provide highly available
