Added support for the new cobbler module.
This patch removes the previous cobbler implementation. The
new implementation relies on hiera, which is processed by puppet-coe.
It also modifies hiera to read the new data/hiera_data/cobbler
directory, and the build.yaml profile

--- a/data/class_groups/build.yaml
+++ b/data/class_groups/build.yaml
@@ -4,7 +4,10 @@ classes:
   - apache::mod::wsgi
   - apache::mod::proxy_http
   - collectd
-  - coi::profiles::cobbler_server
+  - cobbler
+  - coe::cobbler::distro
+  - coe::cobbler::profile
+  - coe::cobbler::system
   - coi::profiles::cache_server
   - coi::profiles::puppet::master
   - graphite
