--- a/data/hiera_data/user.compressed_ha.yaml
+++ b/data/hiera_data/user.compressed_ha.yaml
@@ -96,6 +96,41 @@ rabbit_hosts:
   - node02:5672
   - node03:5672
 
+# galera_servers lists the IP addresses of the nodes which comprise
+# the HA MySQL database
+galera::galera_servers:
+  - 192.168.255.191
+  - 192.168.255.195
+  - 192.168.255.197
+
+# galera_master defines which node of the galera_servers is the 'master'
+# node for bootstrapping purposes; once the cluster is functional this
+# distinction has no meaning. This should be the FQDN for that node.
+galera::galera_master: node01.local.domain
+
+# galera is currently configured with an active-passive load balancer in
+# front of it to restrict writes to a single node. This is needed as a
+# workaround for compatibility issues with Galera and certain sql statements
+# currently used in OpenStack code. See
+# https://bugs.launchpad.net/openstack-cisco/+bug/1321734 for more details.
+#
+# galera_master_ipaddress is the IP address of the initial node in the
+# Galera which gets writes by default
+galera_master_ipaddress: 192.168.255.191
+# galera_backup_ipaddresses lists the IP addresses of the other nodes in
+# the Galera cluster. HAProxy will direct writes to them if
+# galera_master_ipaddress is not reachable
+galera_backup_ipaddresses:
+  - 192.168.255.195
+  - 192.168.255.197
+# galera_master_name is the bare hostname (not FQDN) of galera_master_ipaddress
+galera_master_name: node01
+# galera_backup_names is the bare hostname (not FQDN) of the nodes listed in
+# galera_backup_ipaddresses
+galera_backup_names:
+  - node02
+  - node03
+
 # The short hostnames and port numbers of the hosts on which
 # mongodb is running
 mongodb::replset::sets:
