--- a/data/data_mappings/enable_ha/true.yaml
+++ b/data/data_mappings/enable_ha/true.yaml
@@ -34,6 +34,7 @@ allowed_hosts:
 bind_address:
   - horizon::bind_address
   - horizon::cache_server_ip
+  - ceilometer::api::host
   - cinder::api::bind_host
   - glance::registry::bind_host
   - glance::api::bind_host
