Set charset and collation order parameters
Add data mappings and set charset and collation order parameters for
Ceilometer, Cinder, Glance, Heat, Keystone, Neutron, and Nova.

Conflicts:
	data/hiera_data/common.yaml
	data/data_mappings/common.yaml

Closes-Bug: #1302088
Change-Id: Ia9bb5ef8018bb11158569d8e1ce32d18754f0c2f
(cherry picked from commit ed640d86e1b154356bd56b680b0e0f78f0b85f28)

--- a/data/hiera_data/common.yaml
+++ b/data/hiera_data/common.yaml
@@ -240,3 +240,7 @@ puppet_mysql_version: '2.2'
 
 # Allow rabbitmq cookie to be configured
 rabbitmq::server::wipe_db_on_cookie_change: true
+
+# Default character set and collation order for MySQL
+mysql_default_charset: utf8
+mysql_default_collation: utf8_unicode_ci
