--- a/data/hiera_data/user.common.yaml
+++ b/data/hiera_data/user.common.yaml
@@ -92,7 +92,8 @@ private_interface: eth1
 ### Cobbler config
 # The IP address of the node on which Cobbler will be installed and
 # on which it will listen.
-cobbler::server_ip: 192.168.242.10
+cobbler::server_ip: '192.168.242.10'
+cobbler::next_server_ip: '192.168.242.10'
 
 # Name servers for Cobbler to use
 cobbler::nameservers: '192.168.242.10'
