--- a/data/hiera_data/cobbler/distro.yaml
+++ b/data/hiera_data/cobbler/distro.yaml
@@ -1,4 +1,4 @@
 cobbler_distros:
-  precise-x86_64:
+  trusty-x86_64:
     arch:    'x86_64'
-    isolink: 'http://archive.ubuntu.com/ubuntu/dists/precise/main/installer-amd64/current/images/netboot/mini.iso'
+    isolink: 'http://archive.ubuntu.com/ubuntu/dists/trusty/main/installer-amd64/current/images/netboot/mini.iso'
