--- a/data/hiera_data/cobbler/profile.yaml
+++ b/data/hiera_data/cobbler/profile.yaml
@@ -1,6 +1,6 @@
 cobbler_profiles:
-  precise-x86_64:
+  trusty-x86_64:
     ensure:      present
-    distro:      'precise-x86_64'
+    distro:      'trusty-x86_64'
     nameservers: "$cobbler::nameservers"
     kickstart:   '/var/lib/cobbler/kickstarts/ubuntu-server.preseed'
