Pointed default cobbler profile to correct preseed

--- a/data/hiera_data/cobbler/profile.yaml
+++ b/data/hiera_data/cobbler/profile.yaml
@@ -3,4 +3,4 @@ cobbler_profiles:
     ensure:      present
     distro:      'trusty-x86_64'
     nameservers: "$cobbler::nameservers"
-    kickstart:   '/var/lib/cobbler/kickstarts/ubuntu-server.preseed'
+    kickstart:   '/etc/cobbler/preseed/cisco-preseed'
