cisco preseed params

--- a/data/hiera_data/user.common.yaml
+++ b/data/hiera_data/user.common.yaml
@@ -133,6 +133,44 @@ cobbler::server_identifier: '192.168.242.10'
 # support for this to be added 
 autostart_puppet: true
 
+# preseeding information
+cobbler::diskpart: '/dev/sda'
+cobbler::expert_disk: true
+cobbler::boot_disk: '/dev/sda'
+cobbler::root_part_size: 65536
+cobbler::enable_var: true
+cobbler::var_part_size: 432000
+cobbler::enable_vol_space: true
+cobbler::ntp_server: '192.168.242.10'
+cobbler::time_zone: UTC
+cobbler::admin_user: 'localadmin'
+cobbler::password_crypted: '$6$UfgWxrIv$k4KfzAEMqMg.fppmSOTd0usI4j6gfjs0962.JXsoJRWa5wMz8yQk4SfInn4.WZ3L/MCt5u.62tHDGB36EhiKF1'
+cobbler::packages: 'openssh-server vim vlan lvm2 ntp'
+cobbler::server_ip: '192.168.242.10'
+#cobbler::early_command: ''
+cobbler::openstack_repo_location: 'http://openstack-repo.cisco.com/openstack/cisco'
+cobbler::openstack_release: 'icehouse-proposed'
+cobbler::pocket: ''
+cobbler::supplemental_repo: 'http://openstack-repo.cisco.com/openstack/cisco_supplemental'
+cobbler::late_command: 'sed -e "/logdir/ a pluginsync=true" -i /target/etc/puppet/puppet.conf ; \
+sed -e "/logdir/ a server=%s" -i /target/etc/puppet/puppet.conf ; \
+echo -e "server %s iburst" > /target/etc/ntp.conf ; \
+echo -e "%s" >> /target/etc/modules ; \
+sed -e "s/^ //g" -i /target/etc/modules ; \
+%s ; \
+echo "net.ipv6.conf.default.autoconf=%s" >> /target/etc/sysctl.conf ; \
+echo "net.ipv6.conf.default.accept_ra=%s" >> /target/etc/sysctl.conf ; \
+echo "net.ipv6.conf.all.autoconf=%s" >> /target/etc/sysctl.conf ; \
+echo "net.ipv6.conf.all.accept_ra=%s" >> /target/etc/sysctl.conf ; \
+ifconf="`tail +11 </etc/network/interfaces`" ; \
+echo -e "%s
+" > /target/etc/network/interfaces ; \
+sed -e "s/^ //g" -i /target/etc/network/interfaces ; \
+%s \
+%s \
+'
+
+
 # If you are using Cisco UCS servers managed by UCSM, set the port on
 # which Cobbler should connect to UCSM in order to power nodes off and on.
 # If set to 443, the connection will use SSL, which is generally
