--- a/data/hiera_data/cobbler/system.yaml
+++ b/data/hiera_data/cobbler/system.yaml
@@ -15,7 +15,7 @@ cobbler_systems:
         mac_address: 'aa:bb:cc:dd:ee:f2'
         ip_address:  '10.0.0.4'
         netmask:     '255.255.255.0'
-    kopts: 'netcfg/disable_autoconfig=true netcfg/dhcp_failed=true netcfg/confirm_static=true partman-auto/disk=/dev/sda'
+    kopts: 'netcfg/confirm_static=true partman-auto/disk=/dev/sda'
     power_type:    'ipmilan' #Cisco UCS is 'cisco_ucs'
     power_address: '1.1.1.1'
     power_user:    'someuser'
