Update power_type for trusty
The combination of fence-agents and cobbler shipped in Ubuntu trusty
uses different names for selecting power types than were used with
Ubuntu precise. Update cobbler.yaml to reflect new names.

Change-Id: Ib02a6c0d5f9017e6cf8ef3c09f3780d0a0a8be9e
Closes-Bug: #1325030

--- a/data/cobbler/cobbler.yaml
+++ b/data/cobbler/cobbler.yaml
@@ -20,7 +20,8 @@ log_host=192.168.242.100 \
 netcfg/choose_interface=auto"
 
 node-global:
-  power_type: "ipmitool"
+  #power_type should be ipmilan for CIMC, or cisco_ucs for UCS-M
+  power_type: "ipmilan"
   power_user: "admin"
   power_pass: "password"
   kickstart: "/etc/cobbler/preseed/cisco-preseed"
