diskpart not mapped for cobbler
Map install_drive as an array to diskpart so cobbler generates preseed
files which target an install drive or install drives.

Change-Id: I86c40009ea367bd797856b3754d7347e9ca1dd2c
Closes-Bug: #1325064

--- a/data/data_mappings/common.yaml
+++ b/data/data_mappings/common.yaml
@@ -378,16 +378,6 @@ puppet_mysql_version:
   - ceilometer::db::mysql_module
   - nova::db::mysql::mysql_module
   - nova::mysql_module
-# Cisco plugin support
-#nexus_plugin:
-#  - neutron::plugins::cisco::nexus_plugin
-#vswitch_plugin:
-#  - neutron::plugins::cisco::vswitch_plugin
-#nexus_credentials:
-#  - coe::nexus::nexus_credentials
-#nexus_config:
-#  - coe::nexus::nexus_config
-
 # MySQL char set and collation order
 mysql_default_charset:
   - ceilometer::db::mysql::charset
@@ -405,3 +395,17 @@ mysql_default_collation:
   - keystone::db::mysql::collate
   - neutron::db::mysql::collate
   - nova::db::mysql::collate
+# Cisco plugin support
+#nexus_plugin:
+#  - neutron::plugins::cisco::nexus_plugin
+#vswitch_plugin:
+#  - neutron::plugins::cisco::vswitch_plugin
+#nexus_credentials:
+#  - coe::nexus::nexus_credentials
+#nexus_config:
+#  - coe::nexus::nexus_config
+# Cobbler install drive
+install_drive:
+  - coi::profiles::cobbler_server::diskpart
+  - cobbler::diskpart
+  - cobbler::ubuntu::preseed::diskpart
