Data mappings for preseed package selection
Add data mappings and variables for selecting additional packages to be
installed by the Cobbler preseed.

Change-Id: If7341b00d4ebb9aef82eb003ecc8bf342f6c2d5d
Closes-Bug: #1317195

--- a/data/data_mappings/common.yaml
+++ b/data/data_mappings/common.yaml
@@ -409,3 +409,7 @@ install_drive:
   - coi::profiles::cobbler_server::diskpart
   - cobbler::diskpart
   - cobbler::ubuntu::preseed::diskpart
+packages:
+  - coi::profiles::cobbler_server::packages
+  - cobbler::packages
+  - cobbler::ubuntu::preseed::packages
