Map time server for use by cobbler
Map the cobbler node to be the time server during the Ubuntu install on
cobbler clients.

Change-Id: I3a43ceeb834622c25c0e6bff391766ca8f10f95d
Closes-Bug: #1325082

--- a/data/data_mappings/common.yaml
+++ b/data/data_mappings/common.yaml
@@ -404,6 +404,11 @@ mysql_default_collation:
 #  - coe::nexus::nexus_credentials
 #nexus_config:
 #  - coe::nexus::nexus_config
+
+# map time server for using during install by cobbler
+cobbler_node_ip:
+  - cobbler::ntp_server
+  - cobbler::ubuntu::preseed::ntp_server
 # Cobbler install drive
 install_drive:
   - coi::profiles::cobbler_server::diskpart
