Data mappings for expert_disk
Add data mapping and variable for expert_disk mode in the Ubuntu
installer to be enabled or disabled when installing Ubuntu using
Cobbler.

Change-Id: I5e2c23cb350a1c7140f30324c946bab07e1d8514
Closes-Bug: #1325080

--- a/data/data_mappings/common.yaml
+++ b/data/data_mappings/common.yaml
@@ -409,3 +409,8 @@ install_drive:
   - coi::profiles::cobbler_server::diskpart
   - cobbler::diskpart
   - cobbler::ubuntu::preseed::diskpart
+# expert_disk mode in Ubuntu installs using Cobbler
+expert_disk:
+  - coi::profiles::cobbler_server::expert_disk
+  - cobbler::expert_disk
+  - cobbler::ubuntu::preseed::expert_disk
