Install drive name should be a string
The Ubuntu installer expects the install drive name to be passed as a
string, not an array.

Change-Id: I16813954755c239b1a7c2c289d4bdd036b0de855
Closes-Bug: #1325808

--- a/data/hiera_data/user.common.yaml
+++ b/data/hiera_data/user.common.yaml
@@ -159,7 +159,7 @@ ucsm_port: 443
 
 # The name of the hard drive on which Cobbler should install the operating
 # system.
-install_drive: [/dev/sda]
+install_drive: /dev/sda
 
 # Set to 1 to enable ipv6 route advertisement.  Otherwise, comment out
 # this line or set it to 0.
