Add data mappings to enable promisc vrrp mode in cobbler preseed

--- a/data/data_mappings/common.yaml
+++ b/data/data_mappings/common.yaml
@@ -413,3 +413,5 @@ packages:
   - coi::profiles::cobbler_server::packages
   - cobbler::packages
   - cobbler::ubuntu::preseed::packages
+enable_promisc_vrrp:
+  - cobbler::ubuntu::preseed::enable_promisc_vrrp
