--- a/data/data_mappings/common.yaml
+++ b/data/data_mappings/common.yaml
@@ -395,15 +395,19 @@ mysql_default_collation:
   - keystone::db::mysql::collate
   - neutron::db::mysql::collate
   - nova::db::mysql::collate
-# Cisco plugin support
+# Cisco plugin support.
 #nexus_plugin:
 #  - neutron::plugins::cisco::nexus_plugin
 #vswitch_plugin:
 #  - neutron::plugins::cisco::vswitch_plugin
 #nexus_credentials:
 #  - coe::nexus::nexus_credentials
+# The following lines include both ML2 as well as monolythic.
+# Either use ML2 or use coe, but not both.
 #nexus_config:
 #  - coe::nexus::nexus_config
+# Uncomment this For ML2 and comment the coe line above
+#  - neutron::plugins::ml2::cisco::nexus::nexus_config
 
 # map time server for using during install by cobbler
 cobbler_node_ip:
